with actual data

--- a/automatic_evaluation/Validate_Tool_Chains.ipynb
+++ b/automatic_evaluation/Validate_Tool_Chains.ipynb
@@ -15,24 +15,212 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "8f020523-501f-4482-ad81-5476ea9c7fe1",
    "metadata": {},
    "outputs": [],
    "source": [
     "# https://github.com/analyticsinmotion/werx\n",
-    "import werx"
+    "import werx\n",
+    "from pathlib import Path\n",
+    "import json\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "020064f8-f7ce-4005-8047-39bd6cc37a74",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# test word error rate\n",
     "hypothesis = [\"get_corpora\", \"get_plays_in_corpus_by_title_helper\", \"get_play_characters\", \"some_other\"]\n",
-    "reference = [\"get_corpora\", \"get_plays_in_corpus_by_title_helper\", \"get_play_characters\"]"
+    "reference = [\"get_corpora\", \"get_plays_in_corpus_by_title_helper\", \"get_play_characters\"]\n",
+    "reference_multiple = [[\"get_corpora\", \"get_plays_in_corpus_by_title_helper\", \"get_play_characters\"],\n",
+    "             [\"get_corpora\", \"get_plays_in_corpus_by_title_helper\", \"get_play_characters\", \"some_other\"]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0974fbcc-cd14-48f3-9b1a-38348a0e3b8d",
+   "metadata": {},
+   "source": [
+    "## Read data "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7675be03-1e67-4bd5-a892-91de1b8cc18d",
+   "metadata": {},
+   "source": [
+    "#### Manually created tables to compare the LLM's answer to:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21c95df4-105b-4fa7-a18b-fb4a7f433f2c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# possible tools\n",
+    "prossible_tool_table_path = \"preliminary_work/DraCor MCP Tools - Tabellenblatt1.csv\"\n",
+    "possible_tools_df = pd.read_csv(prossible_tool_table_path)\n",
+    "\n",
+    "# optimal length \n",
+    "optimal_lengths_json_path = Path(\"preliminary_work/expected_tool_chains_light.json\")\n",
+    "with optimal_lengths_json_path.open('r') as optimal_length_json:\n",
+    "    optimal_lengths = json.load(optimal_length_json)\n",
+    "\n",
+    "# optimal chain"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e48a7483-977d-4518-b5b6-ef7c49e5d15f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "possible_tools_df = possible_tools_df.rename(columns={\"Tool/Question\": \"tool\"})\n",
+    "possible_tools_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8124d1d5-7cc6-454a-ac3e-eccbbe4ac67a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def strip_starter(tool_path):\n",
+    "    tool_path = tool_path.split(\":\")\n",
+    "    return tool_path[1]\n",
+    "\n",
+    "    \n",
+    "possible_tools_df[\"tool\"] = possible_tools_df[\"tool\"].apply(lambda x: strip_starter(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7aba1c6-c7e7-49be-ba51-d07354c521f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "possible_tools_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb17a542-3351-4cd3-a9e2-496e7c838e0b",
+   "metadata": {},
+   "source": [
+    "Transpose length dict to df with question ids as column names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab84d68c-4411-4f40-ab4b-71e2f22fc330",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "optimal_lengths_df = pd.DataFrame(optimal_lengths).set_index(\"ID\").transpose()\n",
+    "optimal_lengths_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66d77c39-1bf0-4742-bdb0-5e3d0ee59d68",
+   "metadata": {},
+   "source": [
+    "#### LLM's answer:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "396e3293-ef10-4af0-b30f-3a6749669274",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# directory to answers\n",
+    "sonnet_path = Path(\"results/sonnet-4/extracted/\")\n",
+    "haiku_path = Path(\"results/haiku-4-5/extracted/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71a14e45-4b68-4ef6-a234-ff95a9c4c411",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# as the results also include metadata to the question and the run, we don't need the file name for mapping\n",
+    "def read_results(result_dir:Path, runs_to_analyse:list[int]) -> list[dict]:\n",
+    "    results = []\n",
+    "    for filepath in result_dir.iterdir():\n",
+    "        run = int(filepath.name.split(\"_\")[1])\n",
+    "        if run in runs_to_analyse:\n",
+    "            with filepath.open('r') as json_in:\n",
+    "                result = json.load(json_in)\n",
+    "                if result[\"success\"]:\n",
+    "                    results.append(result)    \n",
+    "    return results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "265524bb-7a12-4999-89b8-3244d0dd54b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "runs_to_analyse_sonnet = list(range(11,21))\n",
+    "runs_to_analyse_haiku = list(range(1,11))\n",
+    "\n",
+    "sonnet_runs = read_results(sonnet_path, runs_to_analyse_sonnet)\n",
+    "haiku_runs = read_results(haiku_path, runs_to_analyse_haiku)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45d9e7cc-5455-4902-8081-5b5450e2eecf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(sonnet_runs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae6e8813-b398-4cf0-a165-cfdf53657fcc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(haiku_runs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8566420-a74c-4bf2-b05a-5b7a2b995209",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sonnet_runs[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d7d2d45-9985-49c6-8bc1-0a935010e136",
+   "metadata": {},
+   "source": [
+    "## Analysis"
    ]
   },
   {
@@ -41,28 +229,33 @@
    "metadata": {},
    "source": [
     "### Length Difference\n",
-    "* pyt this into relation to tool length of reference? (if the reference chain is longer, more difference in length weigh lower?)"
+    "* put this into relation to tool length of reference? (if the reference chain is longer, more difference in length weigh lower?)\n",
+    "* what if the hypothesis chain is shorter? (e.g. reference is \"get corpus name\" & \"get corpus\", hypothesis is \"get corpus\") --> at the moment distance = 0 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "f197b217-60ce-4ea6-8c06-a77e23959390",
+   "execution_count": null,
+   "id": "68c30b39-d1df-4fab-9f4e-567b9bad1b64",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# calculate with optimal tool path\n",
     "length_difference = abs(len(hypothesis) - len(reference))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cbc9339a-5ea6-41d7-9be9-71c6eb3e3f9c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# calculate with manually set optimal length\n",
+    "def calculate_length_difference(hypothesis_length, reference_length):\n",
+    "    if (hypothesis_length < reference_length) and (hypothesis_length != 0):\n",
+    "        return 0 # no difference or have special difference for this?\n",
+    "    return abs(hypothesis_length - reference_length)"
    ]
   },
   {
@@ -75,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "dda07f5a-952e-48ae-8b5b-cdbc4604bec7",
    "metadata": {},
    "outputs": [],
@@ -85,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "99cc7da0-88a6-464a-b405-3a165e5ba85c",
    "metadata": {},
    "outputs": [],
@@ -95,22 +288,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "9210aa55-024e-4c60-a389-ccfb4b8759ec",
+   "execution_count": null,
+   "id": "61d4f751-604e-44bf-ac4d-234bbc4a16ec",
    "metadata": {},
    "outputs": [],
    "source": [
-    "absurd_tools = hypothesis_set.difference(possible_tools)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "id": "a8a7cdfb-acfe-4a67-8244-70c3e78e9155",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "absurdity_rate = len(absurd_tools) / len(hypothesis_set)"
+    "def get_absurd_tool_ratio(hypothesis_set, possible_tools):\n",
+    "    absurd_tools = hypothesis_set.difference(possible_tools)\n",
+    "    absurdity_rate = len(absurd_tools) / len(hypothesis_set)\n",
+    "    return absurdity_rate"
    ]
   },
   {
@@ -118,72 +304,179 @@
    "id": "6a75dd5b-aeea-4184-a448-1fc60323a12a",
    "metadata": {},
    "source": [
-    "### WER "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "4176aa30-b257-4011-8d54-2733c3903099",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hypothesis_str = \" \".join(hypothesis)\n",
-    "reference_str = \" \".join(reference)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "id": "637f5583-a621-4c50-b505-4d0b61f6cf3c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.3333333333333333"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "werx.wer(reference_str, hypothesis_str)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "589152b2-b15e-4a7a-940b-bc9f4d7bfab0",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Inserted: []\n",
-      "Deleted: []\n",
-      "Substituted: [('get_play_characters', 'some_other')]\n"
-     ]
-    }
-   ],
-   "source": [
-    "results = werx.analysis(reference, hypothesis)\n",
-    "\n",
-    "print(\"Inserted:\", results[0].inserted_words)\n",
-    "print(\"Deleted:\", results[0].deleted_words)\n",
-    "print(\"Substituted:\", results[0].substituted_words)"
+    "### WER \n",
+    "* add function to get optimal tool chain from df "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce4b946b-e3bd-49e5-809a-a46ba025cbc1",
+   "id": "8534b49e-72bd-4820-9c97-e06e83f88692",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def get_wer_info(hypothesis_tools: list[str], reference_tools: list[list[str]]):\n",
+    "    reference_tools_str = [\" \".join(reference) for reference in reference_tools]\n",
+    "    hypothesis_str = \" \".join(hypothesis)\n",
+    "    best_score = 1\n",
+    "    for reference_str in reference_tools_str:\n",
+    "        error_rate = werx.wer(reference_str, hypothesis_str)\n",
+    "        if error_rate < best_score:\n",
+    "            best_score = error_rate\n",
+    "            results = werx.analysis(reference_str, hypothesis_str)\n",
+    "            result = results[0]\n",
+    "    \n",
+    "            wer = {}\n",
+    "            wer[\"overall_error_rate\"] = error_rate\n",
+    "            wer[\"insertions\"] = result.inserted_words\n",
+    "            wer[\"deletions\"] = result.deleted_words\n",
+    "            wer[\"substitutions\"] = result.substituted_words\n",
+    "    return wer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3595929-863e-4060-b390-2aa66993a20a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_wer_info(hypothesis, reference_multiple)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7884bde-1d21-491f-b8bf-964e21b60fde",
+   "metadata": {},
+   "source": [
+    "### Calculate Validation Metrics "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e227a8b-ba7a-43ca-9932-9c883352bb71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_possible_tools(possible_tools_df, question_id):\n",
+    "    return set(list(possible_tools_df[possible_tools_df[question_id]>0][\"tool\"]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc5fed57-b60f-4b3c-a981-0c703fa303d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_optimal_length(optimal_lengths_df, question_id):\n",
+    "    return optimal_lengths_df[question_id][\"number_of_tools_expected\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64f0f9ba-76e7-4cf0-b90f-55d469ccdb62",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: add optimal tool chain(s) as parameter\n",
+    "def validate_tool_chains(results, possible_tools_df, optimal_lengths_df):\n",
+    "    for result in results:\n",
+    "        question_id = result[\"id\"]\n",
+    "        tools = result[\"tool_chain\"]\n",
+    "        # length difference\n",
+    "        optimal_length = get_optimal_length(optimal_lengths_df, question_id) \n",
+    "        result[\"tool_path_length_difference\"] = calculate_length_difference(len(tools), optimal_length)\n",
+    "\n",
+    "        # absurd tools \n",
+    "        possible_tools = get_possible_tools(possible_tools_df, question_id)\n",
+    "        result[\"absurd_tool_ratio\"] = get_absurd_tool_ratio(set(tools), possible_tools)\n",
+    "\n",
+    "        # tool path error rate aka WER\n",
+    "        # todo: reference must be list of lists\n",
+    "        # get optimal tool chain for question_id\n",
+    "        #result[\"tool_error_rate\"] = get_wer_info(tools, optimal_tools_df)\n",
+    "    return results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53d48c40-4799-4b12-9dda-59979f6ee79c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sonnet_evaluated = validate_tool_chains(sonnet_runs, possible_tools_df, optimal_lengths_df)\n",
+    "haiku_evaluated = validate_tool_chains(haiku_runs, possible_tools_df, optimal_lengths_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ae1decd-6f8f-4c60-889b-7cb0b0916b03",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "haiku_evaluated[2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb5933a8-d426-451a-ac35-26bde173bf04",
+   "metadata": {},
+   "source": [
+    "## Write validation results "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14bc0bde-a5fa-441f-aeb2-1286563ec732",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_dir = Path(\"results_validated/\")\n",
+    "output_dir_sonnet = output_dir / \"sonnet-4\"\n",
+    "output_dir_haiku = output_dir / \"haiku-4-5\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d6931ba-312e-4d60-b338-bf8425dba9c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def write_validated_results(result_path:Path, validated_runs:list[dict]):\n",
+    "    if not result_path.exists():\n",
+    "        result_path.mkdir()\n",
+    "    for entry in validated_runs:\n",
+    "        filename = result_path / f\"{entry['id']}_{entry['run']}_validated-tools.json\"\n",
+    "        with filename.open('w') as file_out:\n",
+    "            json.dump(entry, file_out)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11dc2490-abfa-4d25-a63d-6e0e75399421",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "write_validated_results(output_dir_sonnet, sonnet_evaluated)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62c1171c-9970-471c-9f80-9e367f39cb7e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "write_validated_results(output_dir_haiku, haiku_evaluated)\n"
+   ]
   }
  ],
  "metadata": {
