update with correct number of jsons for sonnet

--- a/automatic_evaluation/responses_analyser.ipynb
+++ b/automatic_evaluation/responses_analyser.ipynb
@@ -578,6 +578,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1064e725",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_strictly_numeric[df_strictly_numeric['experiment_id'] == '1-3']"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c2a1cacb",
    "metadata": {},
@@ -1330,6 +1340,44 @@
     "corr = merged[\"overall_error_rate\"].corr(merged[\"tool_path_length_difference\"])\n",
     "print(corr)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5d94df2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged[(merged['overall_error_rate'] == 0) & (merged['is_correct_norm'] != True)].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4181e202",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged[(merged['overall_error_rate'] == 0) & (merged['is_correct_norm'] == True)].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e524ad42",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged[(merged['overall_error_rate'] == 0)].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bbfdb7dc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
