--- a/automatic_evaluation/responses_analyser.ipynb
+++ b/automatic_evaluation/responses_analyser.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 852,
+   "execution_count": 3,
    "id": "0c613106",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 853,
+   "execution_count": 4,
    "id": "491d4476",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 854,
+   "execution_count": 5,
    "id": "f7f6b4e7",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 855,
+   "execution_count": 6,
    "id": "c873674b",
    "metadata": {},
    "outputs": [
@@ -244,7 +244,7 @@
        "[160 rows x 6 columns]"
       ]
      },
-     "execution_count": 855,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 856,
+   "execution_count": 7,
    "id": "37d2d7a5",
    "metadata": {},
    "outputs": [
@@ -312,7 +312,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 856,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 857,
+   "execution_count": 8,
    "id": "f0898533",
    "metadata": {},
    "outputs": [],
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 858,
+   "execution_count": 9,
    "id": "bdbae11a",
    "metadata": {},
    "outputs": [
@@ -356,7 +356,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 858,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 859,
+   "execution_count": 10,
    "id": "97a75566",
    "metadata": {},
    "outputs": [],
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 860,
+   "execution_count": 11,
    "id": "af351941",
    "metadata": {},
    "outputs": [
@@ -387,7 +387,7 @@
        "129"
       ]
      },
-     "execution_count": 860,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 861,
+   "execution_count": 12,
    "id": "f6f2ea8f",
    "metadata": {},
    "outputs": [],
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 862,
+   "execution_count": 13,
    "id": "8ec8d650",
    "metadata": {},
    "outputs": [
@@ -418,7 +418,7 @@
        "126"
       ]
      },
-     "execution_count": 862,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 863,
+   "execution_count": 14,
    "id": "e4a9ac7d",
    "metadata": {},
    "outputs": [],
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 864,
+   "execution_count": 15,
    "id": "c596155c",
    "metadata": {},
    "outputs": [
@@ -1311,7 +1311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 865,
+   "execution_count": 16,
    "id": "933b953b",
    "metadata": {},
    "outputs": [
@@ -1324,7 +1324,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 865,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1343,7 +1343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 866,
+   "execution_count": 17,
    "id": "d494afbc",
    "metadata": {},
    "outputs": [],
@@ -1360,7 +1360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 867,
+   "execution_count": 18,
    "id": "c6f00136",
    "metadata": {},
    "outputs": [],
@@ -1370,7 +1370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 868,
+   "execution_count": 19,
    "id": "3225ea3f",
    "metadata": {},
    "outputs": [
@@ -1563,7 +1563,7 @@
        "[160 rows x 7 columns]"
       ]
      },
-     "execution_count": 868,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1574,7 +1574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 869,
+   "execution_count": 20,
    "id": "e1605ddd",
    "metadata": {},
    "outputs": [],
@@ -1591,7 +1591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 870,
+   "execution_count": 21,
    "id": "fa4b5e8e",
    "metadata": {},
    "outputs": [
@@ -1711,7 +1711,7 @@
        "79   1-5_9_extracted-info.json       14              14.0        [14]"
       ]
      },
-     "execution_count": 870,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1722,7 +1722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 871,
+   "execution_count": 22,
    "id": "413d0b57",
    "metadata": {},
    "outputs": [
@@ -1831,7 +1831,7 @@
        "79       14              14.0        [14]"
       ]
      },
-     "execution_count": 871,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1842,7 +1842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 872,
+   "execution_count": 23,
    "id": "4a5d659c",
    "metadata": {},
    "outputs": [
@@ -1874,7 +1874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 873,
+   "execution_count": 24,
    "id": "a28fa2f8",
    "metadata": {},
    "outputs": [],
@@ -1892,7 +1892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 874,
+   "execution_count": 25,
    "id": "3a069896",
    "metadata": {},
    "outputs": [
@@ -1919,7 +1919,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 874,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1930,7 +1930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 875,
+   "execution_count": 26,
    "id": "2a2ad75c",
    "metadata": {},
    "outputs": [
@@ -1957,7 +1957,7 @@
        "Name: numeric_response, dtype: float64"
       ]
      },
-     "execution_count": 875,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1976,7 +1976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 876,
+   "execution_count": 27,
    "id": "60a4615a",
    "metadata": {},
    "outputs": [],
@@ -1989,7 +1989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 877,
+   "execution_count": 28,
    "id": "1c0912e6",
    "metadata": {},
    "outputs": [
@@ -2010,7 +2010,7 @@
        "Name: normalised_response, Length: 160, dtype: string"
       ]
      },
-     "execution_count": 877,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2021,7 +2021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 878,
+   "execution_count": 29,
    "id": "fc1b1c52",
    "metadata": {},
    "outputs": [
@@ -2051,7 +2051,7 @@
        "Name: normalised_response, dtype: string"
       ]
      },
-     "execution_count": 878,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2063,7 +2063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 879,
+   "execution_count": 30,
    "id": "eba299d9",
    "metadata": {},
    "outputs": [],
@@ -2073,7 +2073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 880,
+   "execution_count": 31,
    "id": "d6b69b9d",
    "metadata": {},
    "outputs": [],
@@ -2083,7 +2083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 881,
+   "execution_count": 32,
    "id": "0b4f1648",
    "metadata": {},
    "outputs": [],
@@ -2100,7 +2100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 882,
+   "execution_count": 33,
    "id": "ba38f0e0",
    "metadata": {},
    "outputs": [],
@@ -2111,7 +2111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 883,
+   "execution_count": 34,
    "id": "42cc0a51",
    "metadata": {},
    "outputs": [
@@ -2312,7 +2312,7 @@
        "157               gersh  "
       ]
      },
-     "execution_count": 883,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2323,7 +2323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 884,
+   "execution_count": 35,
    "id": "324e339d",
    "metadata": {},
    "outputs": [
@@ -2464,7 +2464,7 @@
        "157               gersh  "
       ]
      },
-     "execution_count": 884,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2475,7 +2475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 885,
+   "execution_count": 36,
    "id": "39b1e2c7",
    "metadata": {},
    "outputs": [],
@@ -2493,7 +2493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 886,
+   "execution_count": 37,
    "id": "d66f9e30",
    "metadata": {},
    "outputs": [],
@@ -2503,7 +2503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 887,
+   "execution_count": 38,
    "id": "1b00eb1f",
    "metadata": {},
    "outputs": [
@@ -2637,7 +2637,7 @@
        "15  5-4     Foppendorf"
       ]
      },
-     "execution_count": 887,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2648,7 +2648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 888,
+   "execution_count": 39,
    "id": "faa06998",
    "metadata": {},
    "outputs": [],
@@ -2658,7 +2658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 889,
+   "execution_count": 40,
    "id": "63afc48b",
    "metadata": {},
    "outputs": [],
@@ -2668,7 +2668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 890,
+   "execution_count": 41,
    "id": "eab28957",
    "metadata": {},
    "outputs": [
@@ -2812,7 +2812,7 @@
        "4  Open question  "
       ]
      },
-     "execution_count": 890,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2823,7 +2823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 891,
+   "execution_count": 42,
    "id": "2c3bc8b6",
    "metadata": {},
    "outputs": [
@@ -2851,7 +2851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 892,
+   "execution_count": 43,
    "id": "6e745c49",
    "metadata": {},
    "outputs": [],
@@ -2862,7 +2862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 893,
+   "execution_count": 44,
    "id": "42a42d06",
    "metadata": {},
    "outputs": [
@@ -2872,7 +2872,7 @@
        "(60, 10)"
       ]
      },
-     "execution_count": 893,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2883,7 +2883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 894,
+   "execution_count": 45,
    "id": "5499cc0f",
    "metadata": {},
    "outputs": [
@@ -2911,7 +2911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 895,
+   "execution_count": 46,
    "id": "1064e725",
    "metadata": {},
    "outputs": [
@@ -3121,7 +3121,7 @@
        "93       [111]                 111            103  "
       ]
      },
-     "execution_count": 895,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3140,7 +3140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 896,
+   "execution_count": 47,
    "id": "1f05794a",
    "metadata": {},
    "outputs": [],
@@ -3149,24 +3149,25 @@
     "    df = df.copy()\n",
     "    df[\"is_correct\"] = df[\"normalised_response\"] == df[\"correct_answer\"]\n",
     "    df[\"iteration\"] = df.groupby(\"experiment_id\").cumcount() + 1\n",
+    "    df[\"question_id\"] = df[\"experiment_id\"]\n",
     "\n",
     "    if with_emojis:\n",
     "        df[\"emoji\"] = df[\"is_correct\"].map({1: \"✅\", 0: \"❌\"})\n",
     "        hit_table = (\n",
-    "            df.pivot(index=\"experiment_id\", columns=\"iteration\", values=\"emoji\")\n",
+    "            df.pivot(index=\"question_id\", columns=\"iteration\", values=\"emoji\")\n",
     "            .sort_index()\n",
     "            .sort_index(axis=1)\n",
     "        )\n",
     "    else:\n",
     "        hit_table = (\n",
-    "            df.pivot(index=\"experiment_id\", columns=\"iteration\", values=\"is_correct\")\n",
+    "            df.pivot(index=\"question_id\", columns=\"iteration\", values=\"is_correct\")\n",
     "            .sort_index()\n",
     "            .sort_index(axis=1)\n",
     "            .astype(\"Int64\")\n",
     "        )\n",
     "\n",
     "    summary = (\n",
-    "        df.groupby(\"experiment_id\")[\"is_correct\"]\n",
+    "        df.groupby(\"question_id\")[\"is_correct\"]\n",
     "        .agg([\"sum\", \"count\"])\n",
     "        .assign(\n",
     "            label=lambda s: s.apply(\n",
@@ -3196,7 +3197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 897,
+   "execution_count": 48,
    "id": "5e55e924",
    "metadata": {},
    "outputs": [
@@ -3234,7 +3235,7 @@
        "      <th>Summary</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>experiment_id</th>\n",
+       "      <th>question_id</th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -3353,7 +3354,7 @@
       ],
       "text/plain": [
        "iteration           1     2     3     4     5     6     7     8     9    10  \\\n",
-       "experiment_id                                                                 \n",
+       "question_id                                                                   \n",
        "1-1                 ✅     ✅     ✅     ✅     ✅     ✅     ✅     ✅     ✅     ✅   \n",
        "1-2                 ✅     ✅     ❌     ✅     ✅     ✅     ✅     ✅     ✅     ✅   \n",
        "1-3                 ❌     ✅     ✅     ✅     ✅     ✅     ❌     ✅     ✅     ❌   \n",
@@ -3363,7 +3364,7 @@
        "All experiments  None  None  None  None  None  None  None  None  None  None   \n",
        "\n",
        "iteration                                       Summary  \n",
-       "experiment_id                                            \n",
+       "question_id                                              \n",
        "1-1              10 correct answers of 10 total answers  \n",
        "1-2               9 correct answers of 10 total answers  \n",
        "1-3               7 correct answers of 10 total answers  \n",
@@ -3373,7 +3374,7 @@
        "All experiments  36 correct answers of 50 total answers  "
       ]
      },
-     "execution_count": 897,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
